@@ -1,0 +1,4 @@
+{
+    "function": "minecraft:set_nbt",
+    "tag": "{SE_data:{CustomDurability:1}}"
+}
